# LCEVCdec

./: .clang-format  .clang-tidy  .cmake-format.yaml  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  LICENSE.md  README-pkgconfig.txt  README.md  conanfile.py  conanfile.txt  requirements.txt
docs/sphinx/: CMakeLists.txt  Doxyfile.in  api.rst  conf.py  custom.css  doc_sample.cpp  enhancement.rst  example_code.rst  index.rst  introduction.rst  overview.rst  requirements.txt
src/: README.md
src/api/: CMakeLists.txt  Sources.cmake  exports.txt
src/api/include/LCEVC/: lcevc_dec.h
src/api/src/: accel_context.h  api.cpp  buffer_manager.cpp  buffer_manager.h  clock.h  config_map.h  decoder.cpp  decoder.h  decoder_config.cpp  decoder_config.h  decoder_context.cpp  decoder_context.h  decoder_pool.cpp  decoder_pool.h  enums.h  event.h  event_dispatcher.cpp  event_dispatcher.h  event_manager.cpp  event_manager.h  handle.h  interface.cpp  interface.h  lcevc_processor.cpp  lcevc_processor.h  log.cpp  log.h  picture.cpp  picture.h  picture_copy.cpp  picture_copy.h  picture_lock.cpp  picture_lock.h  pool.cpp  pool.h  threading.cpp  threading.h  timestamps.h
src/api/test/harness/: CMakeLists.txt  Sources.cmake
src/api/test/unit/: CMakeLists.txt  Sources.cmake
src/api/utility/include/: uChrono.h  uConfigMap.h  uEnumMap.h  uEnums.h  uLog.h  uPictureCopy.h  uPictureFormatDesc.h  uPlatform.h  uString.h  uTimestamps.h  uTypeTraits.h  uTypes.h
src/api/utility/src/: uLog.cpp  uPictureFormatDesc.cpp  uPlatform.cpp  uString.cpp
src/color_conversion/: CMakeLists.txt  Sources.cmake
src/color_conversion/src/: buffer_read_write.h  color_convert.c  tonemap.c
src/common/test/unit/: CMakeLists.txt  Sources.cmake
src/core/decoder/: CMakeLists.txt  Sources.cmake  status.md
src/core/decoder/emscripten/: init.js  liblcevc_worker_impl.js  license.js  worker_utils.js
src/core/decoder/src/: api.c  context.c  context.h
src/core/sequencing/: CMakeLists.txt  Sources.cmake
src/core/sequencing/include/: lcevc_container.h
src/core/sequencing/src/: lcevc_container.c  predict_timehandle.c  predict_timehandle.h
src/core/test/benchmark/: CMakeLists.txt  Sources.cmake
src/core/test/decoder_unit/: CMakeLists.txt  Sources.cmake
src/core/test/harness/: CMakeLists.txt  Sources.cmake
src/core/test/sequencing_unit/: CMakeLists.txt  Sources.cmake
src/emscripten/: CMakeLists.txt  README.md  Sources.cmake  sample.html
src/emscripten/src/: wrapper.cpp
src/legacy/decoder/: CMakeLists.txt  Sources.cmake  exports.txt
src/legacy/decoder/src/: api.c  context.c  context.h
src/legacy/sequencer/: CMakeLists.txt  Sources.cmake
src/legacy/sequencer/src/: lcevc_container.c  predict_timestamp.c  predict_timestamp.h
src/legacy/test/decoder_unit/: CMakeLists.txt
src/legacy/test/sequencer_unit/: CMakeLists.txt  Sources.cmake
src/overlay_images/: CMakeLists.txt  Sources.cmake
src/overlay_images/include/: images.h  lcevcLogo.h
src/overlay_images/src/: lcevcLogo_100x33.c  lcevcLogo_115x38.c  lcevcLogo_143x48.c  lcevcLogo_172x57.c  lcevcLogo_17x6.c  lcevcLogo_201x67.c  lcevcLogo_21x7.c  lcevcLogo_230x77.c  lcevcLogo_25x8.c  lcevcLogo_28x9.c  lcevcLogo_35x12.c  lcevcLogo_43x14.c  lcevcLogo_50x16.c  lcevcLogo_57x19.c  lcevcLogo_71x24.c  lcevcLogo_86x28.c
src/pipeline_legacy/: CMakeLists.txt  Sources.cmake  exports.txt
src/pipeline_legacy/src/: buffer_manager.cpp  buffer_manager.h  config_map.h  core_interface.cpp  core_interface.h  decode_information.cpp  decode_information.h  decoder.cpp  decoder.h  decoder_builder.cpp  decoder_builder.h  decoder_config.cpp  decoder_config.h  enums.h  lcevc_processor.cpp  lcevc_processor.h  picture.cpp  picture.h  picture_copy.cpp  picture_copy.h  picture_lock.cpp  picture_lock.h
src/pipeline_legacy/test/unit/: CMakeLists.txt  Sources.cmake
src/pipeline_vulkan/: CMakeLists.txt  Sources.cmake
src/pipeline_vulkan/src/: buffer_vulkan.cpp  buffer_vulkan.h  frame_vulkan.cpp  frame_vulkan.h  picture_lock_vulkan.cpp  picture_lock_vulkan.h  picture_vulkan.cpp  picture_vulkan.h  pipeline_builder_vulkan.cpp  pipeline_builder_vulkan.h  pipeline_config_vulkan.h  pipeline_vulkan.cpp  pipeline_vulkan.h
src/pipeline_vulkan/src/shaders/: compile_shaders.py
src/pipeline_vulkan/test/unit/: CMakeLists.txt  Sources.cmake
src/pixel_processing/test/unit/: CMakeLists.txt  Sources.cmake
src/sample_cpp/: CMakeLists.txt  Sources.cmake
src/sample_cpp/src/: main.cpp
src/sample_cpp/standalone/: CMakeLists.txt  README.md  conanfile.py  conanfile.txt  requirements.txt
src/sample_cpp/standalone/cmake/: Findlcevc_dec.cmake
src/utility/: CMakeLists.txt  Sources.cmake
src/utility/src/: base_decoder.cpp  base_decoder_bin.cpp  base_decoder_bin.h  base_decoder_bin_linear.cpp  base_decoder_bin_non_linear.cpp  base_decoder_libav.cpp  bin_format.h  bin_reader.cpp  bin_reader.h  bin_writer.cpp  bin_writer.h  check.cpp  configure.cpp  enum_map.h  extract.c  filesystem.h  get_program_dir.cpp  math_utils.h  md5.cpp  parse_raw_name.cpp  parse_raw_name.h  picture_functions.cpp  picture_layout.cpp  picture_lock.cpp  raw_reader.cpp  raw_writer.cpp  string_utils.cpp  string_utils.h  threading.cpp  types_cli11.cpp  types_convert.cpp  types_stream.cpp
src/utility/src/android_filesystem/: README.md
src/utility/test/: CMakeLists.txt  Sources.cmake
src/utility/test/assets/: build.sh  cactus_10frames.ts  test_176x144_h264.ts  test_176x144_h265.ts  test_176x144_lcevc_h264.h264  test_176x144_lcevc_h264.ts  test_176x144_lcevc_h265.h265  test_176x144_lcevc_h265.ts  test_h264.h264  test_h264.ts
src/utility/test/src/: find_assets_dir.cpp  find_assets_dir.h  mock_api.cpp  mock_api.h  test_base_decoder.cpp  test_bin_reader.cpp  test_bin_writer.cpp  test_byte_order.cpp  test_configure.cpp  test_convert.cpp  test_extract.cpp  test_get_program_dir.cpp  test_md5.cpp  test_parse_raw_name.cpp  test_picture_layout.cpp  test_string_utils.cpp
src/utility/test/unit/: CMakeLists.txt  Sources.cmake
src/utility/test/utilities/: CMakeLists.txt  Sources.cmake
(+735 files in other folders)
